// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Checkbox In Color Context 1`] = `
<div
  data-variant="tinted"
  data-color="accent"
>
  <ds-field data-clickdelegatefor="checkbox-in-color-context">
    <input
      id="checkbox-in-color-context"
      type="checkbox"
      checked
      aria-describedby="mnsrx7udzqy4"
    >
    <label
      data-weight="regular"
      for="checkbox-in-color-context"
    >
      Checkbox label
    </label>
    <div
      data-field="description"
      id="mnsrx7udzqy4"
    >
      Description
    </div>
  </ds-field>
</div>
`;

exports[`Focused 1`] = `
<ds-field data-clickdelegatefor="checkbox-preview">
  <input
    id="checkbox-preview"
    type="checkbox"
    value="value"
    aria-describedby="mnsrx7udzqy5"
  >
  <label
    data-weight="regular"
    for="checkbox-preview"
  >
    Checkbox label
  </label>
  <div
    data-field="description"
    id="mnsrx7udzqy5"
  >
    Description
  </div>
</ds-field>
`;

exports[`One Option 1`] = `
<fieldset aria-labelledby="mnsrx7udzqy2 mnsrx7udzqy3">
  <legend
    data-weight="medium"
    id="mnsrx7udzqy2"
  >
    Bekreft at du er over 18 år
  </legend>
  <p
    data-variant="default"
    id="mnsrx7udzqy3"
  >
    For at vi skal kunne sende deg opplysningen du ber om, må du bekrefte at du er myndig.
  </p>
  <ds-field data-clickdelegatefor="components-checkbox--one-option">
    <input
      id="components-checkbox--one-option"
      type="checkbox"
      value="samtykke"
    >
    <label
      data-weight="regular"
      for="components-checkbox--one-option"
    >
      Jeg bekrefter at jeg er over 18 år
    </label>
  </ds-field>
</fieldset>
`;

exports[`Preview 1`] = `
<ds-field data-clickdelegatefor="checkbox-preview">
  <input
    id="checkbox-preview"
    type="checkbox"
    value="value"
    aria-describedby="mnsrx7udzqy1"
  >
  <label
    data-weight="regular"
    for="checkbox-preview"
  >
    Checkbox label
  </label>
  <div
    data-field="description"
    id="mnsrx7udzqy1"
  >
    Description
  </div>
</ds-field>
`;
